--- a/assets/css/reveil.css
+++ b/assets/css/reveil.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Dosis:400,700");
+@font-face {
+  font-family: timefont;
+  src: url(../fonts/time.ttf);
+}
 
 :root {
   --main-white-color: #f2f2f2;
@@ -61,7 +65,11 @@ body {
   align-items: center;
 }
 
-.page-header .cta-option {
+.page-header .date {
+  font-family: timefont;
+}
+
+.page-header .option {
   font-family: inherit;
   font-size: 1.2rem;
   padding: 5px 18px;
@@ -84,9 +92,15 @@ body {
 
 .page-main .hour {
   display: flex;
+  font-family: timefont;
   flex-direction: center;
   justify-content: center;
   font-size: 20vw;
+}
+
+.page-main .date {
+  display: flex;
+  justify-content: center;
 }
 
 /* FOOTER
